deploy/manifests/dev/us-east-2/tenant/storetheindex/assigner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assigner
spec:
  template:
    spec:
      containers:
        - name: assigner
          resources:
            limits:
              cpu: "3"
              memory: 2Gi
            requests:
              cpu: "3"
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: config
