deploy/manifests/dev/us-east-2/tenant/storetheindex/assigner/service-external.yaml
# External facing assigner libp2p endpoint, used for peering.
kind: Service
apiVersion: v1
metadata:
  name: assigner-external
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    external-dns.alpha.kubernetes.io/hostname: assigner-peer.dev.cid.contact
spec:
  ports:
    - name: libp2p
      port: 3003
      targetPort: libp2p
  selector:
    app: assigner
  externalTrafficPolicy: Local
  type: LoadBalancer
